Improvement : 1. Add Blur Effect when opening Add Money Dialog 2. Improvement for mobile usage to enter values on TextField 3. Add Toast Popup which are not available outside Android Platform